[project]
name = "dcp-dehaze"
version = "0.1.0"
description = "A student project dedicated to dehazing of images using channel-wise model and Dark Channel Prior (DCP)"
authors = [
    {name = "KirillPal",email = "kirpall@ya.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "opencv-python[all] (>=4.11.0.86,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
