[tool.poetry]
name = "dcp_dehaze"
version = "0.1.0"
description = "A student project dedicated to dehazing of images using channel-wise model and Dark Channel Prior (DCP)"
authors = ["KirillPal kirpall@ya.ru"]
readme = "README.md"
packages = [
    { include = "dcp_dehaze", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
